--- a/src/main/resources/templates/general/general-menu.html
+++ b/src/main/resources/templates/general/general-menu.html
@@ -15,21 +15,9 @@
         .btn {
             margin: 6px;
         }
-
-        .container-fluid {
-            text-align: center;
-            display: flex;
-            justify-content: center;
-        }
-
-        .name-of-column {
-            font-weight: 700;
-        }
     </style>
 </head>
-
 <body>
-
 <!-- For navigation bar -->
 <header>
     <ul class="nav">
@@ -42,7 +30,7 @@
         </li>
         <form th:action="@{/logout}" method="post">
             <li>
-                <input type="submit" class="btn btn-danger btn-sm" value="Выход" />
+                <input type="submit" class="btn btn-danger btn-sm" value="Выход"/>
             </li>
         </form>
         <li>
@@ -57,139 +45,126 @@
     </ul>
 </header>
 <section>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-md-12">
-                <div class="content row">
-                    <div class="column col-lg-4 col-md-6 mt-4">
-                        <div class="name-of-column mb-2">
-                            <span>ПЕРСОНАЛ</span>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_EMPLOYEE_VIEW')">
-                            <a th:href="@{/general/employee}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Работники
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_PROFESSION_VIEW')">
-                            <a th:href="@{/general/profession}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Должности
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_DEPARTMENT_VIEW')">
-                            <a th:href="@{/general/department}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Структурные подразделения
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_SCHEDULE_VIEW')">
-                            <a th:href="@{/general/schedule}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Штатное расписание
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_VOCATION_VIEW')">
-                            <a th:href="@{/general/vocation}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    График отпусков
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mt-4">
-                        <div class="name-of-column mb-2">
-                            <span>АКТИВЫ</span>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_PERS_INSTR_VIEW')">
-                            <a th:href="@{/general/p_instrument/catalog}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Инструмент персональный
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_WORK_INSTR_VIEW')">
-                            <a th:href="@{/general/w_instrument/catalog}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Инструмент строительный
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_MEAS_INSTR_VIEW')">
-                            <a th:href="@{/general/m_instrument/catalog}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Инструмент измерительный
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_SCLOTH_VIEW')">
-                            <a th:href="@{/general/s_cloth/catalog}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Спецодежда и СИЗ
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mt-4">
-                        <div class="name-of-column mb-2">
-                            <span>ДЕЯТЕЛЬНОСТЬ</span>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_WORK_OBJECT_VIEW')">
-                            <a th:href="@{/general/workobject}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Объекты работ
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_CONSTR_CONTROL_VIEW')">
-                            <a th:href="@{/general/constr_control}">
-                                <button style="width: 300px; text-align: center" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Строительный контроль
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_DOCUMENT_VIEW')">
-                            <a th:href="@{/general/documentCommunity}">
-                                <button style="width: 300px; text-align: center;" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Документация общества
-                                </button>
-                            </a>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_PERSPECTIVE_VIEW')">
-                            <a th:href="@{/general/perspective}">
-                                <button style="width: 300px; text-align: center;" type="button"
-                                        class="btn btn-outline-success btn-lg">
-                                    Перспективные объекты
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+    <table class="table-content m-4">
+        <thead style="text-align: center">
+        <th>ПЕРСОНАЛ</th>
+        <th>АКТИВЫ</th>
+        <th>ДЕЯТЕЛЬНОСТЬ</th>
+        </thead>
+        <tbody style="vertical-align: top">
+        <td>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_EMPLOYEE_VIEW')">
+                <a th:href="@{/general/employee}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Работники
+                    </button>
+                </a>
             </div>
-        </div>
-    </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_PROFESSION_VIEW')">
+                <a th:href="@{/general/profession}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Должности
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_DEPARTMENT_VIEW')">
+                <a th:href="@{/general/department}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Структурные подразделения
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_SCHEDULE_VIEW')">
+                <a th:href="@{/general/schedule}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Штатное расписание
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_VOCATION_VIEW')">
+                <a th:href="@{/general/vocation}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        График отпусков
+                    </button>
+                </a>
+            </div>
+        </td>
+        <td>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_PERS_INSTR_VIEW')">
+                <a th:href="@{/general/p_instrument/catalog}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Инструмент персональный
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_WORK_INSTR_VIEW')">
+                <a th:href="@{/general/w_instrument/catalog}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Инструмент строительный
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_MEAS_INSTR_VIEW')">
+                <a th:href="@{/general/m_instrument/catalog}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Инструмент измерительный
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_SCLOTH_VIEW')">
+                <a th:href="@{/general/s_cloth/catalog}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Спецодежда и СИЗ
+                    </button>
+                </a>
+            </div>
+        </td>
+        <td>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_WORK_OBJECT_VIEW')">
+                <a th:href="@{/general/workobject}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Объекты работ
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_CONSTR_CONTROL_VIEW')">
+                <a th:href="@{/general/constr_control}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Строительный контроль
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_DOCUMENT_VIEW')">
+                <a th:href="@{/general/documentCommunity}">
+                    <button style="width: 300px; text-align: center;" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Документация общества
+                    </button>
+                </a>
+            </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_PERSPECTIVE_VIEW')">
+                <a th:href="@{/general/perspective}">
+                    <button style="width: 300px; text-align: center;" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Перспективные объекты
+                    </button>
+                </a>
+            </div>
+        </td>
+        </tbody>
+    </table>
 </section>
-
-<footer>
-
-</footer>
-
 <!-- Bootstrap 5.3 JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
