--- a/src/main/resources/templates/employee/employee-menu.html
+++ b/src/main/resources/templates/employee/employee-menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Arrow</title>
     <style>
         .main-table {
             display: block;
@@ -341,8 +341,7 @@
                     <th style="width: 200px">
                         <div class="btn-group">
                             <button onclick="sortTable(5)" type="button" class="btn btn-outline-dark btn-sm"
-                                    style="width: 100px;
-                                    text-align: left">Статус
+                                    style="width: 100px; text-align: left">Статус
                             </button>
                             <button type="button" class="btn btn-outline-dark btn-sm dropdown-toggle"
                                     data-bs-toggle="dropdown" aria-expanded="false"
