--- a/src/main/resources/templates/perspective/perspective-create.html
+++ b/src/main/resources/templates/perspective/perspective-create.html
@@ -37,8 +37,8 @@
                         <input type="text" style="width: 400px" th:field="${perspectiveObject.perspectiveLot}"
                                required
                                minlength="2" maxlength="100">
-<!--                        <p if="${#fields.hasErrors('surName')}" th:errors="${employee.surName}"-->
-<!--                           style="font-size: 13px; color: brown"></p>-->
+                        <p if="${#fields.hasErrors('perspectiveLot')}" th:errors="${perspectiveObject.perspectiveLot}"
+                           style="font-size: 13px; color: brown"></p>
                 </tr>
                 <tr>
                     <th style="text-align: left">003</th>
@@ -57,14 +57,14 @@
                         <input type="text" style="width: 400px" th:field="${perspectiveObject.generalContractor}"
                                required
                                minlength="2" maxlength="100">
-<!--                        <p if="${#fields.hasErrors('middleName')}" th:errors="${employee.middleName}"-->
-<!--                           style="font-size: 13px; color: brown"></p>-->
+                        <p if="${#fields.hasErrors('generalContractor')}" th:errors="${perspectiveObject.generalContractor}"
+                           style="font-size: 13px; color: brown"></p>
                 </tr>
                 <tr>
                     <th style="text-align: left">005</th>
                     <td style="text-align: left"><label>Задание на расценку</label></td>
                     <td style="text-align: left">
-                        <textarea type="text"rows="6" cols="60"
+                        <textarea type="text" rows="6" cols="60"
                                   style="width: 600px" maxlength="1000"
                                   th:field="${perspectiveObject.target}"></textarea>
                         <p if="${#fields.hasErrors('target')}"
