--- a/src/main/resources/templates/perspective/perspective-update.html
+++ b/src/main/resources/templates/perspective/perspective-update.html
@@ -157,6 +157,36 @@
                         </select>
                     <td>
                 </tr>
+                <tr style="display: none">
+                    <th style="text-align: left">010</th>
+                    <td style="text-align: left">Итоговые параметры расценки оборудования и материалов</td>
+                    <td style="text-align: left">
+                        <table>
+                            <tbody>
+                            <tr>
+                                <td style="width: 200px; text-align: left">Сумма итого, б/НДС</td>
+                                <td style="text-align: left">
+                                    <input type="text" th:field="${perspectiveObject.totalPrice}">
+                            </tr>
+                            <tr>
+                                <td style="width: 200px; text-align: left">Кол-во расц. позиций</td>
+                                <td style="text-align: left">
+                                    <input type="text" th:field="${perspectiveObject.successCount}">
+                            </tr>
+                            <tr>
+                                <td style="width: 200px; text-align: left">Общее кол-во позиций</td>
+                                <td style="text-align: left">
+                                    <input type="text" th:field="${perspectiveObject.totalCount}">
+                            </tr>
+                            <tr>
+                                <td style="width: 200px; text-align: left">% расц. позиций</td>
+                                <td style="text-align: left">
+                                    <input type="text" th:field="${perspectiveObject.percentOfSuccess}">
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
                 <tr>
                     <th style="text-align: left">011</th>
                     <td style="text-align: left"><label>Сетевая папка с проектом</label></td>
